add_library(my_lua_lib STATIC
        lapi.c
        lauxlib.c
        lbaselib.c
        lbitlib.c
        lcode.c
        lcorolib.c
        lctype.c
        ldblib.c
        ldebug.c
        ldo.c
        ldump.c
        lfunc.c
        lgc.c
        linit.c
		#liolib.c
        llex.c
        lmem.c
        loadlib.c
        lobject.c
        lopcodes.c
		#loslib.c
        lparser.c
		#lpico8lib.c
        lstate.c
        lstring.c
        lstrlib.c
        ltable.c
        ltablib.c
        ltests.c
        ltm.c
        lundump.c
        lvm.c
        lzio.c

        fix32.h
        lapi.h
        lauxlib.h
        lcode.h
        lctype.h
        ldebug.h
        ldo.h
        lfunc.h
        lgc.h
        llex.h
        llimits.h
        lmem.h
        lobject.h
        lopcodes.h
        lparser.h
        lstate.h
        lstring.h
        ltable.h
        ltests.h
        ltm.h
        luaconf.h
        lua.h
        lualib.h
        lundump.h
        lvm.h
        lzio.h
        )
target_link_libraries(my_lua_lib)
